[metadata]
name = PolyView
version = 0.0.1
author = Will Sumerfield
author_email = example@gmail.com
description = For viewing relationships between multidimensional datasets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/WillSumerfield
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8.2
include_package_data = True